--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,8 +14,8 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  margin-bottom: 1rem;
-  margin-top: 1.5rem;
+  margin-bottom: 0.5rem;
+  margin-top: 1rem;
 }
 
 h1 {
@@ -32,17 +32,17 @@ h3 {
 }
 
 p {
-  margin-bottom: 1rem;
+  margin-bottom: 0.75rem !important;
   line-height: 1.6;
 }
 
 ul, ol {
-  margin-bottom: 1rem;
+  margin-bottom: 0.75rem;
   padding-left: 2rem;
 }
 
 li {
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.25rem;
 }
 
 a {
